fix: reduce margin-bottom for reset button for better spacing

--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -49,7 +49,7 @@ main {
 
 #reset {
     background-color: transparent;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     cursor: pointer;
     border: none;
 }
